--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,398 @@
-/* You can add global styles to this file, and also import other style files */
+.modal-open {
+    overflow: hidden; }
+    .modal-open .modal {
+      overflow-x: hidden;
+      overflow-y: auto; }
+  
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0; }
+  
+  .modal-dialog {
+    position: relative;
+    width: auto;
+    margin: 0.5rem;
+    pointer-events: none; }
+    .modal.fade .modal-dialog {
+      transition: transform 0.3s ease-out;
+      transform: translate(0, -50px); }
+      @media (prefers-reduced-motion: reduce) {
+        .modal.fade .modal-dialog {
+          transition: none; } }
+    .modal.show .modal-dialog {
+      transform: none; }
+    .modal.modal-static .modal-dialog {
+      transform: scale(1.02); }
+  
+  .modal-dialog-scrollable {
+    display: flex;
+    max-height: calc(100% - 1rem); }
+    .modal-dialog-scrollable .modal-content {
+      max-height: calc(100vh - 1rem);
+      overflow: hidden; }
+    .modal-dialog-scrollable .modal-header,
+    .modal-dialog-scrollable .modal-footer {
+      flex-shrink: 0; }
+    .modal-dialog-scrollable .modal-body {
+      overflow-y: auto; }
+  
+  .modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    min-height: calc(100% - 1rem); }
+    .modal-dialog-centered::before {
+      display: block;
+      height: calc(100vh - 1rem);
+      height: min-content;
+      content: ""; }
+    .modal-dialog-centered.modal-dialog-scrollable {
+      flex-direction: column;
+      justify-content: center;
+      height: 100%; }
+      .modal-dialog-centered.modal-dialog-scrollable .modal-content {
+        max-height: none; }
+      .modal-dialog-centered.modal-dialog-scrollable::before {
+        content: none; }
+  
+  .modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 0.3rem;
+    outline: 0; }
+  
+  .modal-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1040;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000; }
+    .modal-backdrop.fade {
+      opacity: 0; }
+    .modal-backdrop.show {
+      opacity: 0.5; }
+  
+  .modal-header { z-index: 9999;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border-bottom: 1px solid #EEEEEE;
+    border-top-left-radius: calc(0.3rem - 1px);
+    border-top-right-radius: calc(0.3rem - 1px); }
+    .modal-header .close {
+      padding: 1rem 1rem;
+      margin: -1rem -1rem -1rem auto; }
+  
+  .modal-title {
+    margin-bottom: 0;
+    line-height: 1.5; }
+  
+  .modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem; }
+  
+  .modal-footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.75rem;
+    border-top: 1px solid #EEEEEE;
+    border-bottom-right-radius: calc(0.3rem - 1px);
+    border-bottom-left-radius: calc(0.3rem - 1px); }
+    .modal-footer > * {
+      margin: 0.25rem; }
+  
+  .modal-scrollbar-measure {
+    position: absolute;
+    top: -9999px;
+    width: 50px;
+    height: 50px;
+    overflow: scroll; }
+  
+  @media (min-width: 576px) {
+    .modal-dialog {
+      max-width: 500px;
+      margin: 1.75rem auto; }
+  
+    .modal-dialog-scrollable {
+      max-height: calc(100% - 3.5rem); }
+      .modal-dialog-scrollable .modal-content {
+        max-height: calc(100vh - 3.5rem); }
+  
+    .modal-dialog-centered {
+      min-height: calc(100% - 3.5rem); }
+      .modal-dialog-centered::before {
+        height: calc(100vh - 3.5rem);
+        height: min-content; }
+  
+    .modal-sm {
+      max-width: 300px; } }
+  @media (min-width: 992px) {
+    .modal-lg,
+    .modal-xl {
+      max-width: 800px; } }
+  @media (min-width: 1200px) {
+    .modal-xl {
+      max-width: 1140px; } }
+
+
+      #main-wrapper {
+        opacity: 0;
+        transition: all 0.25s ease-in;
+        overflow: hidden;
+        position: relative; }
+        #main-wrapper.show {
+          opacity: 1; }
+  
+          
+          .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 1px solid rgba(0, 0, 0, 0.125);
+            border-radius: 0.75rem; }
+            .card > hr {
+              margin-right: 0;
+              margin-left: 0; }
+            .card > .list-group {
+              border-top: inherit;
+              border-bottom: inherit; }
+              .card > .list-group:first-child {
+                border-top-width: 0;
+                border-top-left-radius: calc(0.75rem - 1px);
+                border-top-right-radius: calc(0.75rem - 1px); }
+              .card > .list-group:last-child {
+                border-bottom-width: 0;
+                border-bottom-right-radius: calc(0.75rem - 1px);
+                border-bottom-left-radius: calc(0.75rem - 1px); }
+            .card > .card-header + .list-group,
+            .card > .list-group + .card-footer {
+              border-top: 0; }
+          
+          .card-body {
+            flex: 1 1 auto;
+            min-height: 1px;
+            padding: 1.25rem; }
+          
+          .card-title {
+            margin-bottom: 0.75rem; }
+          
+          .card-subtitle {
+            margin-top: -0.375rem;
+            margin-bottom: 0; }
+          
+          .card-text:last-child {
+            margin-bottom: 0; }
+          
+          .card-link:hover {
+            text-decoration: none; }
+          .card-link + .card-link {
+            margin-left: 1.25rem; }
+          
+          .card-header {
+            padding: 0.75rem 1.25rem;
+            margin-bottom: 0;
+            background-color: rgba(0, 0, 0, 0.03);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.125); }
+            .card-header:first-child {
+              border-radius: calc(0.75rem - 1px) calc(0.75rem - 1px) 0 0; }
+          
+          .card-footer {
+            padding: 0.75rem 1.25rem;
+            background-color: rgba(0, 0, 0, 0.03);
+            border-top: 1px solid rgba(0, 0, 0, 0.125); }
+            .card-footer:last-child {
+              border-radius: 0 0 calc(0.75rem - 1px) calc(0.75rem - 1px); }
+          
+          .card-header-tabs {
+            margin-right: -0.625rem;
+            margin-bottom: -0.75rem;
+            margin-left: -0.625rem;
+            border-bottom: 0; }
+          
+          .card-header-pills {
+            margin-right: -0.625rem;
+            margin-left: -0.625rem; }
+          
+          
+          
+            @media (max-width: 575.98px) {
+              .table-responsive-sm {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch; }
+                .table-responsive-sm > .table-bordered {
+                  border: 0; } }
+            @media (max-width: 767.98px) {
+              .table-responsive-md {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch; }
+                .table-responsive-md > .table-bordered {
+                  border: 0; } }
+            @media (max-width: 991.98px) {
+              .table-responsive-lg {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch; }
+                .table-responsive-lg > .table-bordered {
+                  border: 0; } }
+            @media (max-width: 1199.98px) {
+              .table-responsive-xl {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch; }
+                .table-responsive-xl > .table-bordered {
+                  border: 0; } }
+            @media (max-width: 1439.98) {
+              .table-responsive-xxl {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch; }
+                .table-responsive-xxl > .table-bordered {
+                  border: 0; } }
+            .table-responsive {
+              display: block;
+              width: 100%;
+              overflow-x: auto;
+              -webkit-overflow-scrolling: touch; }
+              .table-responsive > .table-bordered {
+                border: 0; }
+          
+          
+          
+          
+          .content-body {
+              /* margin-left: 21.563rem; */
+              /* margin-left: 20rem;
+              margin-right: 20rem; */
+              z-index: 0;
+              transition: all .2s ease; }
+              @media only screen and (max-width: 1350px) {
+                .content-body {
+                  /* margin-left: 17rem;  */
+                  /* margin-left: 20px; */
+            
+                } }
+          
+                .bg-back{
+                  background: rgb(245,246,247);
+                  background: linear-gradient(90deg, rgba(245,246,247,1) 0%, rgba(243,246,249,1) 17%, rgba(245,246,247,1) 85%, rgba(245,246,247,1) 100%);
+                }
+                
+          .content-body .container {
+              margin-top: 40px; }
+            .content-body .container-fluid, .content-body .container-sm, .content-body .container-md, .content-body .container-lg, .content-body .container-xl {
+              padding-top: 40px;
+              padding-right: 40px;
+              padding-left: 40px; }
+              @media only screen and (max-width: 1200px) {
+                .content-body .container-fluid, .content-body .container-sm, .content-body .container-md, .content-body .container-lg, .content-body .container-xl {
+                  padding-top: 30px;
+                  padding-right: 30px;
+                  padding-left: 30px; } }
+              @media only screen and (max-width: 767px) {
+                .content-body .container-fluid, .content-body .container-sm, .content-body .container-md, .content-body .container-lg, .content-body .container-xl {
+                  padding-top: 20px;
+                  padding-right: 20px;
+                  padding-left: 20px; } }
+              @media only screen and (max-width: 575px) {
+                .content-body .container-fluid, .content-body .container-sm, .content-body .container-md, .content-body .container-lg, .content-body .container-xl {
+                  padding-top: 15px;
+                  padding-right: 15px;
+                  padding-left: 15px; } }
+          
+          
+          
+                  .fs-8 {
+                    font-size: 8px !important;
+                    line-height: 1; }
+                    .fs-9 {
+                      font-size: 9px !important;
+                      line-height: 1; }
+                  .fs-10 {
+                    font-size: 10x !important;
+                    line-height: 1; }
+                .fs-12 {
+                  font-size: 12px !important;
+                  line-height: 1.3; }
+                
+                .fs-13 {
+                  font-size: 13px !important;
+                  line-height: 1.4; }
+                
+                .fs-14 {
+                  font-size: 14px !important;
+                  line-height: 1.5; }
+                
+                .fs-15 {
+                  font-size: 14px !important;
+                  line-height: 1.5; }
+                
+                .fs-16 {
+                  font-size: 16px !important;
+                  line-height: 1.5; }
+                
+                .fs-18 {
+                  font-size: 18px !important;
+                  line-height: 1.5; }
+                
+                .fs-20 {
+                  font-size: 20px !important;
+                  line-height: 1.5; }
+                
+                .fs-22 {
+                  font-size: 22px !important;
+                  line-height: 1.5; }
+                
+                .fs-24 {
+                  font-size: 24px !important;
+                  line-height: 1.4; }
+                
+                .fs-26 {
+                  font-size: 26px !important;
+                  line-height: 1.4; }
+                
+                .fs-28 {
+                  font-size: 28px !important;
+                  line-height: 1.4; }
+                
+                .fs-30 {
+                  font-size: 30px !important;
+                  line-height: 1.4; }
+                
+                .fs-32 {
+                  font-size: 32px !important;
+                  line-height: 1.25; }
+          
+                  .valign-m{
+                    vertical-align: middle;
+                  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
