--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,15 @@
 <div style="background:#2C3E50;height: 55px;align-items: center;display: flex;" fxLayout="row" fxLayoutAlign="space-between" >
     
     <div  style="width: 7.5rem;" fxLayout="row" fxLayoutAlign="start center">
-        
+        <div class="dashboard_bar ml-3" style="color:white">
+           <img style="width:90px" src="./assets/images/Logo_Ausy.png" />
+        </div>
     </div>
     <div class="header-content" style="width: auto;"  fxLayout="row" fxLayoutAlign="end center">
         <nav class="navbar navbar-expand">
             <div class="collapse navbar-collapse justify-content-between">
                 <div class="header-left">
-                    <div class="dashboard_bar" style="color:white">
-                        Ausy
-                    </div>
+                    
                 </div>
                 
                  
