--- a/src/styles.scss
+++ b/src/styles.scss
@@ -330,69 +330,71 @@
           
           
           
-                  .fs-8 {
-                    font-size: 8px !important;
-                    line-height: 1; }
-                    .fs-9 {
-                      font-size: 9px !important;
-                      line-height: 1; }
-                  .fs-10 {
-                    font-size: 10x !important;
-                    line-height: 1; }
-                .fs-12 {
-                  font-size: 12px !important;
-                  line-height: 1.3; }
-                
-                .fs-13 {
-                  font-size: 13px !important;
-                  line-height: 1.4; }
-                
-                .fs-14 {
-                  font-size: 14px !important;
-                  line-height: 1.5; }
-                
-                .fs-15 {
-                  font-size: 14px !important;
-                  line-height: 1.5; }
-                
-                .fs-16 {
-                  font-size: 16px !important;
-                  line-height: 1.5; }
-                
-                .fs-18 {
-                  font-size: 18px !important;
-                  line-height: 1.5; }
-                
-                .fs-20 {
-                  font-size: 20px !important;
-                  line-height: 1.5; }
-                
-                .fs-22 {
-                  font-size: 22px !important;
-                  line-height: 1.5; }
-                
-                .fs-24 {
-                  font-size: 24px !important;
-                  line-height: 1.4; }
-                
-                .fs-26 {
-                  font-size: 26px !important;
-                  line-height: 1.4; }
-                
-                .fs-28 {
-                  font-size: 28px !important;
-                  line-height: 1.4; }
-                
-                .fs-30 {
-                  font-size: 30px !important;
-                  line-height: 1.4; }
-                
-                .fs-32 {
-                  font-size: 32px !important;
-                  line-height: 1.25; }
-          
-                  .valign-m{
-                    vertical-align: middle;
-                  }
+                 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.fs-8 {
+    font-size: 8px !important;
+    line-height: 1; }
+    .fs-9 {
+      font-size: 9px !important;
+      line-height: 1; }
+  .fs-10 {
+    font-size: 10x !important;
+    line-height: 1; }
+.fs-12 {
+  font-size: 12px !important;
+  line-height: 1.3; }
+
+.fs-13 {
+  font-size: 13px !important;
+  line-height: 1.4; }
+
+.fs-14 {
+  font-size: 14px !important;
+  line-height: 1.5; }
+
+.fs-15 {
+  font-size: 14px !important;
+  line-height: 1.5; }
+
+.fs-16 {
+  font-size: 16px !important;
+  line-height: 1.5; }
+
+.fs-18 {
+  font-size: 18px !important;
+  line-height: 1.5; }
+
+.fs-20 {
+  font-size: 20px !important;
+  line-height: 1.5; }
+
+.fs-22 {
+  font-size: 22px !important;
+  line-height: 1.5; }
+
+.fs-24 {
+  font-size: 24px !important;
+  line-height: 1.4; }
+
+.fs-26 {
+  font-size: 26px !important;
+  line-height: 1.4; }
+
+.fs-28 {
+  font-size: 28px !important;
+  line-height: 1.4; }
+
+.fs-30 {
+  font-size: 30px !important;
+  line-height: 1.4; }
+
+.fs-32 {
+  font-size: 32px !important;
+  line-height: 1.25; }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
