--- a/src/app/components/modals/modal-confirm/modal-confirm.component.html
+++ b/src/app/components/modals/modal-confirm/modal-confirm.component.html
@@ -9,7 +9,7 @@
     
 
   <div class=""  fxLayout="row" fxLayoutAlign="center center">
-    <p><strong>Voulez-vous retirer {{employee.lastName}} {{employee.firstName}} ?</strong></p>
+    <p>Voulez-vous retirer <strong>{{employee.lastName}} {{employee.firstName}} </strong> ?</p>
   </div>
  
  
