--- a/src/app/components/modals/modal-employee/modal-employee.component.html
+++ b/src/app/components/modals/modal-employee/modal-employee.component.html
@@ -48,8 +48,8 @@
           </select>
         </div>
         <div class="form-group col-md-3">
-          <label for="suiviStatus" class="fs-12">Status</label>
-          <select id="suiviStatus" class="custom-select fs-12" name="suiviStatus" formControlName="suiviStatus">
+          <label for="statusOfChecking" class="fs-12">Status</label>
+          <select id="statusOfChecking" class="custom-select fs-12" name="statusOfChecking" formControlName="statusOfChecking">
             <option class=""  >Suivi sans action</option>
           </select>
         </div>
@@ -83,13 +83,23 @@
         <div class="form-group col-md-4">
           <label for="majDC" class="fs-12">MAJ DC</label>
           <select id="majDC" class="form-control fs-12" name="majDC" formControlName="majDC">
-            <option selected>Choose...</option>
+            <option selected>MAJ</option>
             <option>...</option>
           </select>
         </div>
         <div class="form-group col-md-3">
           <label for="exp" class="fs-12">Exp</label>
           <input type="text" class="form-control fs-12" id="exp" name="exp" formControlName="exp">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="competences" class="fs-12">Compétences</label>
+          <textarea class="form-control fs-12" id="competences" formControlName="competences" rows="3"></textarea>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="actions" class="fs-12">Actions commerciales</label>
+          <textarea class="form-control fs-12" id="actions" formControlName="actions" rows="3"></textarea>
         </div>
       </div>
       <div class="form-row">
