--- a/src/styles.scss
+++ b/src/styles.scss
@@ -342,8 +342,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       font-size: 9px !important;
       line-height: 1; }
   .fs-10 {
-    font-size: 10x !important;
+    font-size: 10px !important;
     line-height: 1; }
+
+    .fs-11 {
+      font-size: 12px !important;
+      line-height: 1.3; }
+
 .fs-12 {
   font-size: 12px !important;
   line-height: 1.3; }
